# ot-harjoitustyo

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
dokumentaatio/: arkkitehtuuri.md  käyttöohje.md  työaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: app.py  index.py  login.py
src/entities/: button.py  display_manager.py  game_sprite.py  hunger_generator.py  image_loader.py  input_box.py  io.py  item_machine.py  pet.py  pet_sprite.py  user.py  user_repository.py  validator.py  window_manager.py
src/repositories/: user_repository.py
src/tests/: app_test.py  image_loader_test.py  item_machine_test.py  pet_test.py  user_test.py  validator_test.py
src/ui/: button.py  image_loader.py  input_box.py
